@@ -52,6 +52,8 @@ x2goclient (4.1.1.1-0x2go1) UNRELEASED; urgency=medium
     - src/onmainwindow.cpp: fix another leaked X2goSettings object.
     - src/onmainwindow.cpp: rename xinerama env variable on session startup to
       X2GO_XINERAMA in accordance with server changes.
+    - src/onmainwindow.cpp: supply xinerama option as another parameter to
+      x2goresume-session on session resume.
 
   [ Oleksandr Shneyder ]
   * New upstream version (4.1.1.1):
